--- a/src/main/resources/templates/employee.html
+++ b/src/main/resources/templates/employee.html
@@ -9,15 +9,15 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </head>
 <body>
-<div th:include="header.html"></div>
+<div th:insert="header.html"></div>
 <div class="container my-2">
 
     <h1 align="center">Personnel List</h1>
     <table border="1" class="table table-striped table-responsive-md">
         <thead>
-            <th><a th:href="@{'/page/'+${currentPage} +'?sortField=firstName&sortDirection='+${reverseOrder}}">First Name</a></th>
-            <th><a th:href="@{'/page/'+${currentPage} +'?sortField=lastName&sortDirection='+${reverseOrder}}">Last Name</a></th>
-            <th><a th:href="@{'/page/'+${currentPage} +'?sortField=email&sortDirection='+${reverseOrder}}">Email</a></th>
+            <th><a th:href="@{'/page/'+${currentPage} +'?sortField=firstName&sortDirection='+${reverseSortDir}}">First Name</a></th>
+            <th><a th:href="@{'/page/'+${currentPage} +'?sortField=lastName&sortDirection='+${reverseSortDir}}">Last Name</a></th>
+            <th><a th:href="@{'/page/'+${currentPage} +'?sortField=email&sortDirection='+${reverseSortDir}}">Email</a></th>
             <th>Actions</th>
         </tr>
         </thead>
@@ -32,27 +32,24 @@
         </tr>
         </tbody>
     </table>
-    <div th:if="${totalPages>1}">
-        <div class="row col-sm-10">
-            <div class="col-sm-3">
-                Total row: [[${totalItems}]]
+    <div th:if = "${totalPages > 1}">
+        <div class = "row col-sm-10">
+            <div class = "col-sm-2">
+                Total Rows: [[${totalItems}]]
             </div>
-            <div class="col-sm-2">
-                <span th:each="i:${#numbers.sequence(1,totalPages)}">
-                    <a th:if="${currentPage != i}" th:href="@{'/page/'+${i}}">[[${i}]]</a>
-                    <span th:unless="${currentPage != i}">[[${i}]]</span> &nbsp;
-                </span>
+            <div class = "col-sm-1">
+					<span th:each="i: ${#numbers.sequence(1, totalPages)}">
+						<a th:if="${currentPage != i}" th:href="@{'/page/' + ${i}+ '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir}}">[[${i}]]</a>
+						<span th:unless="${currentPage != i}">[[${i}]]</span>  &nbsp; &nbsp;
+					</span>
             </div>
-            <div class="col-sm-2">
-                <a th:if="${currentPage > 1}" th:href="@{'/page/'+${currentPage - 1}}">Previous</a>
-                <span th:unless="${currentPage > 1}">Previous</span>
+            <div class = "col-sm-1">
+                <a th:if="${currentPage < totalPages}" th:href="@{'/page/' + ${currentPage + 1}+ '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir}}">Next</a>
+                <span th:unless="${currentPage < totalPages}">Next</span>
             </div>
-            <div class="col-sm-2">
-                <a th:if="${currentPage < totalPages}" th:href="@{'/page/'+${currentPage + 1}}">Next</a>
-                <span th:unless="${currentPage <totalPages}">Next</span>
-            </div>
-            <div class="col-sm-2">
-                <a th:if="${currentPage < totalPages}" th:href="@{'/page/'+ ${totalPages}}">Last</a>
+
+            <div class="col-sm-1">
+                <a th:if="${currentPage < totalPages}" th:href="@{'/page/' + ${totalPages}+ '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir}}">Last</a>
                 <span th:unless="${currentPage < totalPages}">Last</span>
             </div>
         </div>
