Update manager type product

--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -22,7 +22,7 @@
                     <a class="nav-link" href="/employee">Employee</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Contract</a>
+                    <a class="nav-link" href="/type-product">Type Product</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Department</a>
