--- a/src/main/resources/templates/employee.html
+++ b/src/main/resources/templates/employee.html
@@ -15,9 +15,9 @@
     <h1 align="center">Personnel List</h1>
     <table border="1" class="table table-striped table-responsive-md">
         <thead>
-            <th><a th:href="@{'/page/'+${currentPage} +'?sortField=firstName&sortDirection='+${reverseSortDir}}">First Name</a></th>
-            <th><a th:href="@{'/page/'+${currentPage} +'?sortField=lastName&sortDirection='+${reverseSortDir}}">Last Name</a></th>
-            <th><a th:href="@{'/page/'+${currentPage} +'?sortField=email&sortDirection='+${reverseSortDir}}">Email</a></th>
+            <th><a th:href="@{'/page/' + ${currentPage} + '?sortField=firstName&sortDir=' + ${reverseSortDir}}">First Name</a></th>
+            <th><a th:href="@{'/page/' + ${currentPage} + '?sortField=lastName&sortDir='  + ${reverseSortDir}}">Last Name</a></th>
+            <th><a th:href="@{'/page/'+ ${currentPage} + '?sortField=email&sortDir=' + ${reverseSortDir}}">Email</a></th>
             <th>Actions</th>
         </tr>
         </thead>
