--- a/src/main/resources/templates/type-product.html
+++ b/src/main/resources/templates/type-product.html
@@ -4,22 +4,28 @@
     <meta charset="UTF-8">
     <title>Personnel Management System</title>
     <link th:href="@{css/main.css}" rel="stylesheet" type="text/css"/>
-    <script type="text/javascript" th:src="@{js/main.js}" ></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script type="text/javascript" th:src="@{js/main.js}"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+            crossorigin="anonymous"></script>
 </head>
 <body>
 <div th:insert="header.html"></div>
 <div class="container my-2">
 
-    <h1 align="center">Type Product List</h1>
+    <div class="d-flex justify-content-between">
+        <h1>Type Product List</h1>
+        <a th:href="@{/type-product/new}" class="btn btn-primary align-self-center">Add Type Product</a>
+    </div>
     <table border="1" class="table table-striped table-responsive-md">
         <thead>
-            <th>Type Product Code</th>
-            <th>Type Product Name</th>
-            <th>Type Product Status</th>
-            <th>Create Date</th>
-            <th>Actions</th>
+        <th>Type Product Code</th>
+        <th>Type Product Name</th>
+        <th>Type Product Status</th>
+        <th>Create Date</th>
+        <th>Actions</th>
         </tr>
         </thead>
         <thead>
@@ -29,34 +35,45 @@
             <td th:text="${typeproduct.typeProductName}"></td>
             <td th:text="${typeproduct.typeProductStatus}"></td>
             <td th:text="${typeproduct.createDate}"></td>
-<!--            <td><a th:href="@{/showFormupdate/{id}(id=${typeproduct.type_product_id})}" class="btn btn-info">Update</a>-->
-<!--                <a th:href="@{/deleteEmplyee/{id}(id=${typeproduct.type_product_id})}" class="btn btn-danger">Delete</a></td>-->
+            <td>
+                <a th:href="@{/type-product/{id}(id=${typeproduct.typeProductId})}" class="btn btn-info">Detail</a>
+                <a th:href="@{/type-product/delete/{id}(id=${typeproduct.typeProductId})}"
+                   class="btn btn-danger">Delete</a>
+            </td>
         </tr>
         </tbody>
     </table>
-    <div th:if = "${totalPages > 1}">
-        <div class = "row col-sm-10">
-            <div class = "col-sm-2">
+    <div th:if="${totalPages > 1}">
+        <div class="row col-sm-10">
+            <div class="col-sm-2">
                 Total Rows: [[${totalItems}]]
             </div>
-            <div class = "col-sm-1">
+            <div class="col-sm-1">
 					<span th:each="i: ${#numbers.sequence(1, totalPages)}">
-						<a th:if="${currentPage != i}" th:href="@{'/page/' + ${i}+ '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir}}">[[${i}]]</a>
+						<a th:if="${currentPage != i}"
+                           th:href="@{'/page/' + ${i}+ '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir}}">[[${i}]]</a>
 						<span th:unless="${currentPage != i}">[[${i}]]</span>  &nbsp; &nbsp;
 					</span>
             </div>
-            <div class = "col-sm-1">
-                <a th:if="${currentPage < totalPages}" th:href="@{'/page/' + ${currentPage + 1}+ '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir}}">Next</a>
+            <div class="col-sm-1">
+                <a th:if="${currentPage < totalPages}"
+                   th:href="@{'/page/' + ${currentPage + 1}+ '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir}}">Next</a>
                 <span th:unless="${currentPage < totalPages}">Next</span>
             </div>
 
             <div class="col-sm-1">
-                <a th:if="${currentPage < totalPages}" th:href="@{'/page/' + ${totalPages}+ '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir}}">Last</a>
+                <a th:if="${currentPage < totalPages}"
+                   th:href="@{'/page/' + ${totalPages}+ '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir}}">Last</a>
                 <span th:unless="${currentPage < totalPages}">Last</span>
             </div>
         </div>
     </div>
-    <a th:href="@{/newEmployeesForm}" class="btn btn-primary">Add Type Product</a>
+    <div>
+        <a th:href="@{/}" class="btn btn-primary"> Home </a>
+
+        <div class="row-sm-3"></div>
+
+    </div>
 </div>
 </body>
 </html>
