--- a/src/main/resources/templates/type_product_view/new.html
+++ b/src/main/resources/templates/type_product_view/new.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <title>Personnel Management System</title>
     <link th:href="@{css/main.css}" rel="stylesheet" type="text/css"/>
-    <script type="text/javascript" th:src="@{js/main.js}" ></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script type="text/javascript" th:src="@{js/main.js}"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+            crossorigin="anonymous"></script>
 </head>
 <body>
 <div th:include="~{header.html}"></div>
@@ -18,14 +21,32 @@
         <div>
             <label>Type Product Code: </label>
             <label>
-                <input type="text" th:field="*{typeProductCode}" placeholder="Type Product Code" class="form-control mb-4 col-4">
+                <input type="text" th:field="*{typeProductCode}" placeholder="Type Product Code"
+                       class="form-control mb-4 col-4">
             </label>
         </div>
 
         <div>
             <label>Type Product Name: </label>
             <label>
-                <input type="text" th:field="*{typeProductName}" placeholder="Type Product Name" class="form-control mb-4 col-4">
+                <input type="text" th:field="*{typeProductName}" placeholder="Type Product Name"
+                       class="form-control mb-4 col-4">
+            </label>
+        </div>
+
+        <div>
+            <label>Import Price: </label>
+            <label>
+                <input type="text" th:field="*{importPrice}" placeholder="Import Price"
+                       class="form-control mb-4 col-4">
+            </label>
+        </div>
+
+        <div>
+            <label>Selling Price: </label>
+            <label>
+                <input type="text" th:field="*{sellingPrice}" placeholder="Selling Price"
+                       class="form-control mb-4 col-4">
             </label>
         </div>
 
@@ -33,8 +54,10 @@
             <label>Type Product Status: </label>
             <div th:each="option : ${T(group.g22.demostore.enums.TypeProductStatusOption).values()}">
                 <div class="custom-control custom-radio custom-control-inline">
-                    <input type="radio" th:field="*{typeProductStatus}" th:value="${option.getValue()}" class="custom-control-input">
-                    <label class="custom-control-label" th:for="${#ids.prev('typeProductStatus')}" th:text="${option.getName()}">option</label>
+                    <input type="radio" th:field="*{typeProductStatus}" th:value="${option.getValue()}"
+                           class="custom-control-input">
+                    <label class="custom-control-label" th:for="${#ids.prev('typeProductStatus')}"
+                           th:text="${option.getName()}">option</label>
                 </div>
             </div>
         </div>
@@ -42,7 +65,7 @@
         <div>
             <a th:href="@{/type-product}" class="btn btn-primary">Go back</a>
 
-            <button type="submit"class="btn btn-info col-2">Save</button>
+            <button type="submit" class="btn btn-info col-2">Save</button>
         </div>
     </form>
 </div>
