--- a/src/main/resources/templates/employee_view/new_employees.html
+++ b/src/main/resources/templates/employee_view/new_employees.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <title>Personnel Management System</title>
     <link th:href="@{css/main.css}" rel="stylesheet" type="text/css"/>
-    <script type="text/javascript" th:src="@{js/main.js}" ></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script type="text/javascript" th:src="@{js/main.js}"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+            crossorigin="anonymous"></script>
 </head>
 <body>
 <div th:include="header.html"></div>
@@ -30,15 +33,18 @@
             <div th:each="option : ${T(group.g22.demostore.enums.GenderOption).values()}">
                 <div class="custom-control custom-radio custom-control-inline">
                     <input type="radio" th:field="*{genderOption}" th:value="${option}" class="custom-control-input">
-                    <label class="custom-control-label" th:for="${#ids.prev('genderOption')}" th:text="${option}">option</label>
+                    <label class="custom-control-label" th:for="${#ids.prev('genderOption')}"
+                           th:text="${option}">option</label>
                 </div>
             </div>
-        </div><br>
+        </div>
+        <br>
         <input type="text" th:field="*{email}" placeholder="Email" class="form-control mb-4 col-4">
         <div>
             <label>Date of birth:</label>
             <input type="date" th:field="*{dob}" placeholder="Date of birth" class="yyyy-MM-dd">
-        </div><br>
+        </div>
+        <br>
         <div>
             <label>Address: </label>
             <input type="text" th:field="*{address}" placeholder="Address" class="form-control mb-4 col-4">
@@ -49,18 +55,23 @@
         </div>
         <div class="form-group">
             <label>Choose people group:</label><br>
-            <select th:field="*{peopleOption}" id="peopleOption" onfocus='this.size=6;' onblur='this.size=0;' onchange='this.size=1; this.blur();'>
-                <option value="" >People option</option>
+            <select th:field="*{peopleOption}" id="peopleOption" onfocus='this.size=6;' onblur='this.size=0;'
+                    onchange='this.size=1; this.blur();'>
+                <option value="">People option</option>
                 <option th:each="people :  ${T(group.g22.demostore.enums.PeopleOption).values()}"
-                        th:value="${people}" th:text="${people}">option</option>
+                        th:value="${people}" th:text="${people}">option
+                </option>
             </select>
-        </div><br>
+        </div>
+        <br>
         <div class="col-md-4">
             <label th:for="*{images}">Select image:</label>
-            <input type="file" id="file-input" th:field="*{images}" name="image" accept="image/*" class="form-control-file" onchange="loadFile(event)" >
-            <img id="employee-img-output" />
-        </div><br>
-        <button type="submit"class="btn btn-info col-2">Save</button>
+            <input type="file" id="file-input" th:field="*{images}" name="image" accept="image/*"
+                   class="form-control-file" onchange="loadFile(event)">
+            <img id="employee-img-output"/>
+        </div>
+        <br>
+        <button type="submit" class="btn btn-info col-2">Save</button>
     </form>
 </div>
 </body>
