--- a/src/main/resources/templates/type-product.html
+++ b/src/main/resources/templates/type-product.html
@@ -23,6 +23,8 @@
         <thead>
         <th>Type Product Code</th>
         <th>Type Product Name</th>
+        <th>Import Price</th>
+        <th>Selling Price</th>
         <th>Type Product Status</th>
         <th>Create Date</th>
         <th>Actions</th>
@@ -33,6 +35,8 @@
         <tr th:each="typeproduct : ${listTypeProduct}">
             <td th:text="${typeproduct.typeProductCode}"></td>
             <td th:text="${typeproduct.typeProductName}"></td>
+            <td th:text="${typeproduct.importPrice}"></td>
+            <td th:text="${typeproduct.sellingPrice}"></td>
             <td th:text="${typeproduct.typeProductStatus}"></td>
             <td th:text="${typeproduct.createDate}"></td>
             <td>
