--- a/src/main/resources/templates/invoice_view/invoices.html
+++ b/src/main/resources/templates/invoice_view/invoices.html
@@ -15,21 +15,24 @@
 <div th:insert="header.html"></div>
 <div class="container my-2" align="center">
 
-    <h1 align="center">Chức năng thống kê 123</h1><br><br><br>
+    <h1 align="center">Bảng danh sách hoá đơn</h1><br><br><br>
+    <table border="1" class="table table-striped table-responsive-md">
+        <thead>
+        <th>Invoice Id</th>
+        <th>Create Date</th>
+        <th>Total Amount</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="invoice : ${invoices}">
+            <td><a th:href="@{/invoice/detail-invoice/{id}(id=${invoice.id})}" th:text="${invoice.id}"></a>
+            <td th:text="${invoice.createDate}"></td>
+            <td th:text="${invoice.totalAmount}"></td>
+        </tr>
+        </tbody>
+    </table>
     <div>
-        <a th:href="@{/invoice/add-invoice}" class="btn btn-primary col-4">Tạo hoá đơn</a>
-    </div>
-    <br>
-    <div>
-        <a th:href="@{/invoice/get-invoices}" class="btn btn-primary col-4">Xem hoá đơn</a>
-    </div>
-    </br>
-    <div>
-        <a th:href="@{/money-statistic}" class="btn btn-primary col-4">Thống kê doanh thu, lợi nhuận</a>
-    </div>
-    </br>
-    <div>
-        <a th:href="@{/product-statistic}" class="btn btn-primary col-4">Thống kê sản phẩm bán chạy</a>
+        <a th:href="@{/statistic}" class="btn btn-primary">Go back</a>
     </div>
 </div>
 </body>
