--- a/src/main/resources/templates/invoice_view/create_success.html
+++ b/src/main/resources/templates/invoice_view/create_success.html
@@ -58,7 +58,7 @@
         </label>
     </div>
     <div>
-        <a th:href="@{/statistic}" class="btn btn-primary">Go back</a>
+        <a th:href="@{/invoice/get-invoices}" class="btn btn-primary">Go back</a>
 
         <a th:href="@{/invoice/add-invoice}" class="btn btn-info col-2">Tạo hoá đơn tiếp theo</a>
     </div>
