--- a/src/main/resources/templates/invoice_view/new_invoice.html
+++ b/src/main/resources/templates/invoice_view/new_invoice.html
@@ -37,7 +37,7 @@
             </table>
         </div>
         <div>
-            <a th:href="@{/statistic}" class="btn btn-primary">Go back</a>
+            <a href="javascript:history.back()" class="btn btn-primary">Go back</a>
 
             <button type="submit" class="btn btn-info col-2">Save</button>
         </div>
