--- a/src/main/resources/templates/statistic.html
+++ b/src/main/resources/templates/statistic.html
@@ -15,21 +15,18 @@
 <div th:insert="header.html"></div>
 <div class="container my-2" align="center">
 
-    <h1 align="center">Chức năng thống kê 123</h1><br><br><br>
-    <div>
-        <a th:href="@{/invoice/add-invoice}" class="btn btn-primary col-4">Tạo hoá đơn</a>
-    </div>
+    <h1 align="center">Chức năng thống kê</h1><br><br><br>
     <br>
     <div>
         <a th:href="@{/invoice/get-invoices}" class="btn btn-primary col-4">Xem hoá đơn</a>
     </div>
     </br>
     <div>
-        <a th:href="@{/money-statistic}" class="btn btn-primary col-4">Thống kê doanh thu, lợi nhuận</a>
+        <a th:href="@{/statistic/search-money-statistic}" class="btn btn-primary col-4">Thống kê hoá đơn theo thời gian</a>
     </div>
     </br>
     <div>
-        <a th:href="@{/product-statistic}" class="btn btn-primary col-4">Thống kê sản phẩm bán chạy</a>
+        <a th:href="@{/statistic/get-product-statistic}" class="btn btn-primary col-4">Thống kê sản phẩm bán chạy</a>
     </div>
 </div>
 </body>
