--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -25,12 +25,11 @@
                     <a class="nav-link" href="/type-product">Type Product</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Department</a>
+                    <a class="nav-link" href="/statistic">Statistics</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Salary Rank</a>
+                <li class="nav-item" sec:authorize="isAuthenticated()">
+                    <a class="nav-link" th:href="@{/?logout}">Logout</a>
                 </li>
-                <li sec:authorize="isAuthenticated()"><a th:href="@{/?logout}">Logout</a></li>
 
             </ul>
         </div>
