update sort, page thống kê

--- a/src/main/resources/templates/invoice_view/new_invoice.html
+++ b/src/main/resources/templates/invoice_view/new_invoice.html
@@ -31,7 +31,7 @@
                     <td th:text="${product.typeProductCode}"></td>
                     <td th:text="${product.typeProductName}"></td>
                     <td th:text="${product.sellingPrice}"></td>
-                    <td><input type="number" th:name="${product.typeProductId}" th:value="0"></td>
+                    <td><input type="number" th:name="'pId.' + ${product.typeProductId} " th:value="0"></td>
                 </tr>
                 </tbody>
             </table>
