--- a/src/main/resources/templates/invoice_view/invoices.html
+++ b/src/main/resources/templates/invoice_view/invoices.html
@@ -15,14 +15,19 @@
 <div th:insert="header.html"></div>
 <div class="container my-2">
 
-    <h1 align="center">Bảng danh sách hoá đơn</h1><br><br><br>
+    <h1 align="center">Personnel List</h1>
     <table border="1" class="table table-striped table-responsive-md">
         <thead>
-        <th>Invoice Id</th>
-        <th>Create Date</th>
-        <th>Total Amount</th>
+        <th><a th:href="@{'/invoice/page/' + ${currentPage} + '?sortField=id&sortDir=' + ${reverseSortDir}}">Invoice Id
+        </a></th>
+        <th><a th:href="@{'/invoice/page/' + ${currentPage} + '?sortField=createDate&sortDir='  + ${reverseSortDir}}">Create
+            Date</a></th>
+        <th><a th:href="@{'/invoice/page/'+ ${currentPage} + '?sortField=totalAmount&sortDir=' + ${reverseSortDir}}">Total
+            Amount</a>
+        </th>
         </tr>
         </thead>
+        <thead>
         <tbody>
         <tr th:each="invoice : ${invoices}">
             <td><a th:href="@{/invoice/detail-invoice/{id}(id=${invoice.id})}" th:text="${invoice.id}"></a>
@@ -31,6 +36,36 @@
         </tr>
         </tbody>
     </table>
+    <div th:if="${totalPages > 1}">
+        <div class="row col-sm-12">
+            <div class="col-sm-9">
+					<span th:each="i: ${#numbers.sequence(1, totalPages)}">
+						<a th:if="${currentPage != i}"
+                           th:href="@{'/invoice/page/' + ${i}+ '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir}}">[[${i}]]</a>
+						<span th:unless="${currentPage != i}">[[${i}]]</span>  &nbsp; &nbsp;
+					</span>
+            </div>
+
+            <div class="align-self-center">
+                <a th:if="${currentPage > 1}"
+                   th:href="@{'/invoice/page/' + ${totalPages - totalPages + 1}+ '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir}}">Top</a>
+                <span th:unless="${currentPage > 1}">Top</span>
+
+                <a th:if="${currentPage > 1}"
+                   th:href="@{'/invoice/page/' + ${currentPage - 1}+ '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir}}">Previous</a>
+                <span th:unless="${currentPage > 1}">Previous</span>
+
+                <a th:if="${currentPage < totalPages}"
+                   th:href="@{'/invoice/page/' + ${currentPage + 1}+ '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir}}">Next</a>
+                <span th:unless="${currentPage < totalPages}">Next</span>
+
+                <a th:if="${currentPage < totalPages}"
+                   th:href="@{'/invoice/page/' + ${totalPages}+ '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir}}">Last</a>
+                <span th:unless="${currentPage < totalPages}">Last</span>
+            </div>
+        </div>
+    </div>
+    <br>
     <div>
         <a th:href="@{/invoice/add-invoice}" class="btn btn-primary">Tạo hoá đơn</a>
         <a th:href="@{/statistic}" class="btn btn-primary">Go back</a>
