--- a/src/main/resources/templates/statistic_view/money_statistic.html
+++ b/src/main/resources/templates/statistic_view/money_statistic.html
@@ -29,29 +29,99 @@
         </h1>
         <br><br><br>
     </div>
-
-    <table border="1" class="table table-striped table-responsive-md">
-        <thead>
-        <th>Invoice Id</th>
-        <th>Create Date</th>
-        <th>Total Amount</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr th:each="invoice : ${result['invoices']}">
-            <td><a th:href="@{/invoice/detail-invoice/{id}(id=${invoice.id})}" th:text="${invoice.id}"></a>
-            <td th:text="${invoice.createDate}"></td>
-            <td th:text="${invoice.totalAmount}"></td>
-        </tr>
-        </tbody>
-    </table>
     <div>
         Total Amount All:
         <td th:text="${result['totalAmountAll']}"></td>
-    </div>
-    <div>
-        <a th:href="@{/invoice/add-invoice}" class="btn btn-primary">Tạo hoá đơn</a>
-        <a th:href="@{/statistic}" class="btn btn-primary">Go back</a>
+        <table border="1" class="table table-striped table-responsive-md">
+            <thead>
+            <th><a th:href="@{'/statistic/page/' + ${currentPage} + '?sortField=id&sortDir=' + ${reverseSortDir}
+                                                                  + '&option=' + ${option}
+                                                                  + '&fromDate=' + ${fromDate}
+                                                                  + '&toDate=' + ${toDate}
+                                                                  + '&specificDate=' + ${specificDate}}">Invoice Id</a>
+            </th>
+            <th>
+                <a th:href="@{'/statistic/page/' + ${currentPage} + '?sortField=createDate&sortDir='  + ${reverseSortDir}
+                                                                  + '&option=' + ${option}
+                                                                  + '&fromDate=' + ${fromDate}
+                                                                  + '&toDate=' + ${toDate}
+                                                                  + '&specificDate=' + ${specificDate}}">Create Date</a>
+            </th>
+            <th>
+                <a th:href="@{'/statistic/page/'+ ${currentPage} + '?sortField=totalAmount&sortDir=' + ${reverseSortDir}
+                                                                 + '&option=' + ${option}
+                                                                 + '&fromDate=' + ${fromDate}
+                                                                 + '&toDate=' + ${toDate}
+                                                                 + '&specificDate=' + ${specificDate}}">Total Amount</a>
+            </th>
+            </tr>
+            </thead>
+            <thead>
+            <tbody>
+            <tr th:each="invoice : ${invoices}">
+                <td><a th:href="@{/invoice/detail-invoice/{id}(id=${invoice.id})}" th:text="${invoice.id}"></a>
+                <td th:text="${invoice.createDate}"></td>
+                <td th:text="${invoice.totalAmount}"></td>
+            </tr>
+            </tbody>
+        </table>
+        <div th:if="${totalPages > 1}">
+            <div class="row col-sm-12">
+                <div class="col-sm-9">
+					<span th:each="i: ${#numbers.sequence(1, totalPages)}">
+						<a th:if="${currentPage != i}"
+                           th:href="@{'/statistic/page/' + ${i}+ '?sortField=' + ${sortField}
+                                                               + '&sortDir=' + ${sortDir}
+                                                               + '&option=' + ${option}
+                                                               + '&fromDate=' + ${fromDate}
+                                                               + '&toDate=' + ${toDate}
+                                                               + '&specificDate=' + ${specificDate}}">[[${i}]]</a>
+						<span th:unless="${currentPage != i}">[[${i}]]</span>  &nbsp; &nbsp;
+					</span>
+                </div>
+
+                <div class="align-self-center">
+                    <a th:if="${currentPage > 1}"
+                       th:href="@{'/statistic/page/' + ${totalPages - totalPages + 1} + '?sortField=' + ${sortField}
+                                                     + '&sortDir=' + ${sortDir}
+                                                     + '&option=' + ${option}
+                                                     + '&fromDate=' + ${fromDate}
+                                                     + '&toDate=' + ${toDate}
+                                                     + '&specificDate=' + ${specificDate}}">Top</a>
+                    <span th:unless="${currentPage > 1}">Top</span>
+
+                    <a th:if="${currentPage > 1}"
+                       th:href="@{'/statistic/page/' + ${currentPage - 1} + '?sortField=' + ${sortField}
+                                                                          + '&sortDir=' + ${sortDir}
+                                                                          + '&option=' + ${option}
+                                                                          + '&fromDate=' + ${fromDate}
+                                                                          + '&toDate=' + ${toDate}
+                                                                          + '&specificDate=' + ${specificDate}}">Previous</a>
+                    <span th:unless="${currentPage > 1}">Previous</span>
+
+                    <a th:if="${currentPage < totalPages}"
+                       th:href="@{'/statistic/page/' + ${currentPage + 1} + '?sortField=' + ${sortField}
+                                                                          + '&sortDir=' + ${sortDir}
+                                                                          + '&option=' + ${option}
+                                                                          + '&fromDate=' + ${fromDate}
+                                                                          + '&toDate=' + ${toDate}
+                                                                          + '&specificDate=' + ${specificDate}}">Next</a>
+                    <span th:unless="${currentPage < totalPages}">Next</span>
+
+                    <a th:if="${currentPage < totalPages}"
+                       th:href="@{'/statistic/page/' + ${totalPages} + '?sortField=' + ${sortField}
+                                                                     + '&sortDir=' + ${sortDir}
+                                                                     + '&option=' + ${option}
+                                                                     + '&fromDate=' + ${fromDate}
+                                                                     + '&toDate=' + ${toDate}
+                                                                     + '&specificDate=' + ${specificDate}}">Last</a>
+                    <span th:unless="${currentPage < totalPages}">Last</span>
+                </div>
+            </div>
+        </div>
+        <div>
+            <a th:href="@{/statistic}" class="btn btn-primary">Go back</a>
+        </div>
     </div>
 </div>
 </body>
