--- a/src/main/resources/templates/invoice_view/new_invoice.html
+++ b/src/main/resources/templates/invoice_view/new_invoice.html
@@ -17,21 +17,21 @@
     <h1>Tạo hoá đơn</h1>
     <hr>
     <h2>Nhập số lượng cho từng sản phẩm</h2>
-    <form action="#" th:action="@{/invoice/save}" th:object="${listTypeProduct}" method="post" align="left">
+    <form action="#" th:action="@{/invoice/save}" th:object="${listProduct}" method="post" align="left">
         <div>
             <table border="1" class="table table-striped table-responsive-md">
                 <thead>
-                <th>Type Product Code</th>
-                <th>Type Product Name</th>
+                <th>Product Id</th>
+                <th>Product Name</th>
                 <th>Selling Price</th>
                 <th>Quantity</th>
                 </thead>
                 <tbody>
-                <tr th:each="product : ${listTypeProduct}">
-                    <td th:text="${product.typeProductCode}"></td>
-                    <td th:text="${product.typeProductName}"></td>
+                <tr th:each="product : ${listProduct}">
+                    <td th:text="${product.productId}"></td>
+                    <td th:text="${product.productName}"></td>
                     <td th:text="${product.sellingPrice}"></td>
-                    <td><input type="number" th:name="'pId.' + ${product.typeProductId} " th:value="0"></td>
+                    <td><input type="number" th:name="'pId.' + ${product.productId} " th:value="0"></td>
                 </tr>
                 </tbody>
             </table>
