--- a/src/main/resources/templates/statistic_view/product_statistic.html
+++ b/src/main/resources/templates/statistic_view/product_statistic.html
@@ -18,11 +18,11 @@
     <table border="1" class="table table-striped table-responsive-md">
         <thead>
         <th>
-            <a th:href="@{'/statistic/pt/page/' + ${currentPage} + '?sortField=typeProductId&sortDir=' + ${reverseSortDir}}">Type
+            <a th:href="@{'/statistic/pt/page/' + ${currentPage} + '?sortField=productId&sortDir=' + ${reverseSortDir}}">Type
                 Product Id
             </a></th>
         <th>
-            <a th:href="@{'/statistic/pt/page/' + ${currentPage} + '?sortField=typeProductName&sortDir=' + ${reverseSortDir}}">Type
+            <a th:href="@{'/statistic/pt/page/' + ${currentPage} + '?sortField=productName&sortDir=' + ${reverseSortDir}}">Type
                 Product Name
             </a></th>
         <th>
@@ -40,8 +40,8 @@
         <thead>
         <tbody>
         <tr th:each="product : ${products}">
-            <td th:text="${product.typeProductId}"></td>
-            <td th:text="${product.typeProductName}"></td>
+            <td th:text="${product.productId}"></td>
+            <td th:text="${product.productName}"></td>
             <td th:text="${product.sellingPrice}"></td>
             <td th:text="${product.sellNumber}"></td>
             <td th:text="${product.totalRevenue}"></td>
