--- a/src/main/resources/templates/statistic_view/product_statistic.html
+++ b/src/main/resources/templates/statistic_view/product_statistic.html
@@ -18,11 +18,11 @@
     <table border="1" class="table table-striped table-responsive-md">
         <thead>
         <th>
-            <a th:href="@{'/statistic/pt/page/' + ${currentPage} + '?sortField=productId&sortDir=' + ${reverseSortDir}}">Type
+            <a th:href="@{'/statistic/pt/page/' + ${currentPage} + '?sortField=productId&sortDir=' + ${reverseSortDir}}">
                 Product Id
             </a></th>
         <th>
-            <a th:href="@{'/statistic/pt/page/' + ${currentPage} + '?sortField=productName&sortDir=' + ${reverseSortDir}}">Type
+            <a th:href="@{'/statistic/pt/page/' + ${currentPage} + '?sortField=productName&sortDir=' + ${reverseSortDir}}">
                 Product Name
             </a></th>
         <th>
