--- a/src/main/resources/templates/type-product.html
+++ b/src/main/resources/templates/type-product.html
@@ -71,7 +71,7 @@
         </div>
     </div>
     <div>
-        <a th:href="@{/}" class="btn btn-primary"> Home </a>
+        <a th:href="@{/home}" class="btn btn-primary"> Home </a>
 
         <div class="row-sm-3"></div>
 
