--- a/src/main/resources/templates/employee.html
+++ b/src/main/resources/templates/employee.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Personnel Management System</title>
+    <title>Store Management System</title>
     <link th:href="@{css/main.css}" rel="stylesheet" type="text/css"/>
     <script type="text/javascript" th:src="@{js/main.js}"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -15,15 +15,13 @@
 <div th:insert="header.html"></div>
 <div class="container my-2">
 
-    <h1 align="center">Personnel List</h1>
+    <h1 align="center">Danh sách nhân sự</h1>
     <table border="1" class="table table-striped table-responsive-md">
         <thead>
-        <th><a th:href="@{'/page/' + ${currentPage} + '?sortField=firstName&sortDir=' + ${reverseSortDir}}">First
-            Name</a></th>
-        <th><a th:href="@{'/page/' + ${currentPage} + '?sortField=lastName&sortDir='  + ${reverseSortDir}}">Last
-            Name</a></th>
+        <th><a th:href="@{'/page/' + ${currentPage} + '?sortField=firstName&sortDir=' + ${reverseSortDir}}">Họ</a></th>
+        <th><a th:href="@{'/page/' + ${currentPage} + '?sortField=lastName&sortDir='  + ${reverseSortDir}}">Tên</a></th>
         <th><a th:href="@{'/page/'+ ${currentPage} + '?sortField=email&sortDir=' + ${reverseSortDir}}">Email</a></th>
-        <th>Actions</th>
+        <th></th>
         </tr>
         </thead>
         <thead>
@@ -32,8 +30,8 @@
             <td th:text="${employee.firstName}"></td>
             <td th:text="${employee.lastName}"></td>
             <td th:text="${employee.email}"></td>
-            <td><a th:href="@{/showFormupdate/{id}(id=${employee.id})}" class="btn btn-info">Update</a>
-                <a th:href="@{/deleteEmplyee/{id}(id=${employee.id})}" class=" btn btn-danger">Delete</a></td>
+            <td><a th:href="@{/showFormupdate/{id}(id=${employee.id})}" class="btn btn-info">Chi tiết</a>
+                <a th:href="@{/deleteEmplyee/{id}(id=${employee.id})}" class=" btn btn-danger">Xóa</a></td>
         </tr>
         </tbody>
     </table>
@@ -62,7 +60,7 @@
             </div>
         </div>
     </div>
-    <a th:href="@{/newEmployeesForm}" class="btn btn-primary">Add new employee</a>
+    <a th:href="@{/newEmployeesForm}" class="btn btn-primary">Thêm thông tin nhân viên</a>
 </div>
 </body>
 </html>
