--- a/src/main/resources/templates/employee_view/update_employees.html
+++ b/src/main/resources/templates/employee_view/update_employees.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Personnel Management System</title>
+    <title>Store Management System</title>
     <link th:href="@{css/main.css}" rel="stylesheet" type="text/css"/>
     <script type="text/javascript" th:src="@{js/main.js}"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -10,56 +10,60 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
             crossorigin="anonymous"></script>
+    <script type="text/javascript" th:src="@{js/employee.js}"></script>
 </head>
 <body>
 <div th:include="header.html"></div>
 <div class="container">
     <a class="navbar-brand">
-        <hr>
-        <h2>Update Employee</h2>
-        <form action="#" th:action="@{/saveEmployee}" th:object="${employee}" method="post">
+        <h2>thông tin nhân viên</h2>
+        <form name="employeeform" action="#" th:action="@{/saveEmployee}" th:object="${employee}" method="post" onsubmit="return validateForm()">
             <!--add hidden form to handle update -->
             <input type="hidden" th:field="*{id}"/>
             <div>
-                <label>Employee Name: </label>
+                <label>Tên nhân viên: </label>
                 <label>
-                    <input type="text" th:field="*{firstName}" placeholder="First Name" class="form-control mb-4 col-4">
+                    <input name="fname" type="text" th:field="*{firstName}" placeholder="Họ" class="form-control mb-4 col-4">
                 </label>
                 <label>
-                    <input type="text" th:field="*{lastName}" placeholder="Last Name" class="form-control mb-4 col-4">
+                    <input name="lname" type="lname" th:field="*{lastName}" placeholder="Tên" class="form-control mb-4 col-4">
                 </label>
             </div>
 
             <div class="form-group">
-                <label>Gender: </label>
+                <label>Giới tính: </label>
                 <div th:each="option : ${T(group.g22.demostore.enums.GenderOption).values()}">
                     <div class="custom-control custom-radio custom-control-inline">
-                        <input type="radio" th:field="*{genderOption}" th:value="${option}"
-                               class="custom-control-input">
-                        <label class="custom-control-label" th:for="${#ids.prev('genderOption')}" th:text="${option}">option</label>
+                        <input name="gender" type="radio" th:field="*{genderOption}" th:value="${option}" class="custom-control-input">
+                        <label class="custom-control-label" th:for="${#ids.prev('genderOption')}"
+                               th:text="${option}">option</label>
                     </div>
                 </div>
             </div>
             <br>
-            <input type="text" th:field="*{email}" placeholder="Email" class="form-control mb-4 col-4">
             <div>
-                <label>Date of birth:</label>
-                <input type="date" th:field="*{dob}" placeholder="Date of birth" class="yyyy-MM-dd">
+                <label>Email:</label>
+                <input name="email" type="text" th:field="*{email}" placeholder="Email" class="form-control mb-4 col-4">
+            </div>
+
+            <div>
+                <label>Ngày sinh:</label>
+                <input name="date" type="date" th:field="*{dob}" placeholder="Date of birth" class="yyyy-MM-dd" required>
             </div>
             <br>
             <div>
-                <label>Address: </label>
-                <input type="text" th:field="*{address}" placeholder="Address" class="form-control mb-4 col-4">
+                <label>Địa chỉ: </label>
+                <input name="address" type="text" th:field="*{address}" placeholder="Địa chỉ" class="form-control mb-4 col-4">
             </div>
             <div>
-                <label>Identity card number: </label>
-                <input type="text" th:field="*{identityno}" placeholder="Identity no" class="form-control mb-4 col-4">
+                <label>Căn cước công dân: </label>
+                <input name="identity" type="text" th:field="*{identityno}" placeholder="Số CCCD" class="form-control mb-4 col-4">
             </div>
             <div class="form-group">
-                <label>Choose people group:</label><br>
-                <select th:field="*{peopleOption}" id="peopleOption" onfocus='this.size=6;' onblur='this.size=0;'
-                        onchange='this.size=1; this.blur();'>
-                    <option value="">People option</option>
+                <label>Dân tộc:</label><br>
+                <select name="" th:field="*{peopleOption}" id="peopleOption" onfocus='this.size=6;' onblur='this.size=0;'
+                        onchange='this.size=1; this.blur();' required>
+                    <option value="">null</option>
                     <option th:each="people :  ${T(group.g22.demostore.enums.PeopleOption).values()}"
                             th:value="${people}" th:text="${people}">option
                     </option>
@@ -67,17 +71,16 @@
             </div>
             <br>
             <div class="col-md-4">
-                <label th:for="*{images}">Select image:</label>
-                <input type="file" th:field="*{images}" name="image" accept="image/*" class="form-control-file"
-                       onchange="loadFile(event)">
-                <img id="output"/>
+                <label th:for="*{images}">Ảnh:</label>
+                <input type="file" id="file-input" th:field="*{images}" name="image" accept="image/*"
+                       class="form-control-file" onchange="loadFile(event)" required>
+                <img id="employee-img-output"/>
             </div>
             <br>
-
-            <button type="submit" class="btn btn-info col-2">Update</button>
+            <button type="submit" class="btn btn-info col-2">Chỉnh Sửa</button>
         </form>
         <hr>
-        <a th:href="@{/}">back to home page</a>
+        <a th:href="@{/home}">Về trang chủ</a>
     </a>
 </div>
 </body>
