--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -11,7 +11,7 @@
 <!-- Navigation -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
     <div class="container-fluid">
-        <a class="navbar-brand" th:href="@{/home}">Store Management System</a>
+        <a class="navbar-brand" th:href="@{/home}">Quản lý cửa hàng</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="#navbarSupportedContent"
                 aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -19,16 +19,16 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link" href="/employee">Employee</a>
+                    <a class="nav-link" href="/employee">Nhân viên</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/type-product">Type Product</a>
+                    <a class="nav-link" href="/type-product">Mặt hàng</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/statistic">Statistics</a>
+                    <a class="nav-link" href="/statistic">Thống kê</a>
                 </li>
                 <li class="nav-item" sec:authorize="isAuthenticated()">
-                    <a class="nav-link" th:href="@{/?logout}">Logout</a>
+                    <a class="nav-link" th:href="@{/?logout}">Đăng xuất</a>
                 </li>
 
             </ul>
