--- a/src/main/resources/templates/invoice_view/create_success.html
+++ b/src/main/resources/templates/invoice_view/create_success.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Personnel Management System</title>
+    <title>Store Management System</title>
     <link th:href="@{css/main.css}" rel="stylesheet" type="text/css"/>
     <script type="text/javascript" th:src="@{js/main.js}"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -25,7 +25,7 @@
         </label>
     </div>
     <div>
-        <label>Create Date: </label>
+        <label>Ngày tạo: </label>
         <label>
                 <span type="text" th:text="*{createDate}" placeholder="Product Code"
                       class="form-control mb-4 col-4"/>
@@ -35,10 +35,10 @@
         <label>Products: </label>
         <table border="1" class="table table-striped table-responsive-md">
             <thead>
-            <th>Product Id</th>
-            <th>Product Name</th>
-            <th>Selling Price</th>
-            <th>Quantity</th>
+            <th>ID</th>
+            <th>Tên</th>
+            <th>Giá bán</th>
+            <th>Số lượng</th>
             </thead>
             <tbody>
             <tr th:each="product : ${invoice.productQuantities}">
@@ -58,7 +58,7 @@
         </label>
     </div>
     <div>
-        <a th:href="@{/invoice/get-invoices}" class="btn btn-primary">Go back</a>
+        <a th:href="@{/invoice/get-invoices}" class="btn btn-primary">Quay lại</a>
 
         <a th:href="@{/invoice/add-invoice}" class="btn btn-info col-2">Tạo hoá đơn tiếp theo</a>
     </div>
