--- a/src/main/resources/templates/invoice_view/invoices.html
+++ b/src/main/resources/templates/invoice_view/invoices.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Personnel Management System</title>
+    <title>Store Management System</title>
     <link th:href="@{css/main.css}" rel="stylesheet" type="text/css"/>
     <script type="text/javascript" th:src="@{js/main.js}"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -18,10 +18,9 @@
     <h1 align="center">Personnel List</h1>
     <table border="1" class="table table-striped table-responsive-md">
         <thead>
-        <th><a th:href="@{'/invoice/page/' + ${currentPage} + '?sortField=id&sortDir=' + ${reverseSortDir}}">Invoice Id
+        <th><a th:href="@{'/invoice/page/' + ${currentPage} + '?sortField=id&sortDir=' + ${reverseSortDir}}">Mã hóa đơn
         </a></th>
-        <th><a th:href="@{'/invoice/page/' + ${currentPage} + '?sortField=createDate&sortDir='  + ${reverseSortDir}}">Create
-            Date</a></th>
+        <th><a th:href="@{'/invoice/page/' + ${currentPage} + '?sortField=createDate&sortDir='  + ${reverseSortDir}}">Ngày tạo</a></th>
         <th><a th:href="@{'/invoice/page/'+ ${currentPage} + '?sortField=totalAmount&sortDir=' + ${reverseSortDir}}">Total
             Amount</a>
         </th>
