--- a/src/main/resources/templates/invoice_view/new_invoice.html
+++ b/src/main/resources/templates/invoice_view/new_invoice.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Personnel Management System</title>
+    <title>Store Management System</title>
     <link th:href="@{css/main.css}" rel="stylesheet" type="text/css"/>
     <script type="text/javascript" th:src="@{js/main.js}"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -21,10 +21,10 @@
         <div>
             <table border="1" class="table table-striped table-responsive-md">
                 <thead>
-                <th>Product Id</th>
-                <th>Product Name</th>
-                <th>Selling Price</th>
-                <th>Quantity</th>
+                <th>Id</th>
+                <th>Tên</th>
+                <th>Giá bán</th>
+                <th>Số lượng</th>
                 </thead>
                 <tbody>
                 <tr th:each="product : ${listProduct}">
