--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="ISO-8859-1">
-<title>Restaurant Management Web</title>
+<title>Store Management System</title>
 
 <link rel="stylesheet"
 	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
@@ -34,7 +34,7 @@
 		<div class = "row">
 			<div class = "col-md-6 col-md-offset-3">
 				
-				<h1> User Login Page </h1>
+				<h1> ??ng nh?p </h1>
 				<form th:action="@{/}" method="post">
 					
 					<!-- error message -->
@@ -49,13 +49,13 @@
 					</div>
 					
 					<div class = "form-group">
-						<label for ="username"> Username </label> :
+						<label for ="username"> Tài kho?n </label> :
 						<input type="text" class = "form-control" id ="username" name = "username"
 						placeholder="Enter Email ID" autofocus="autofocus">
 					</div>
 					
 					<div class="form-group">
-						<label for="password">Password</label>: <input type="password"
+						<label for="password">M?t kh?u</label>: <input type="password"
 							id="password" name="password" class="form-control"
 							placeholder="Enter Password" />
 					</div>
