--- a/src/main/resources/templates/type-product.html
+++ b/src/main/resources/templates/type-product.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Personnel Management System</title>
+    <title>Store Management System</title>
     <link th:href="@{css/main.css}" rel="stylesheet" type="text/css"/>
     <script type="text/javascript" th:src="@{js/main.js}"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -17,15 +17,15 @@
 
     <div class="d-flex justify-content-between">
         <h1>Type Product List</h1>
-        <a th:href="@{/type-product/new}" class="btn btn-primary align-self-center">Add Type Product</a>
+        <a th:href="@{/type-product/new}" class="btn btn-primary align-self-center">Thêm Loại mặt hàng</a>
     </div>
     <table border="1" class="table table-striped table-responsive-md">
         <thead>
-        <th>Type Product Code</th>
-        <th>Type Product Name</th>
-        <th>Type Product Status</th>
-        <th>Create Date</th>
-        <th>Actions</th>
+        <th>Mã loại mặt hàng</th>
+        <th>Loại mặt hàng</th>
+        <th>Tình trạng</th>
+        <th>Ngày tạo</th>
+        <th></th>
         </tr>
         </thead>
         <thead>
@@ -36,9 +36,9 @@
             <td th:text="${typeproduct.typeProductStatus}"></td>
             <td th:text="${typeproduct.createDate}"></td>
             <td>
-                <a th:href="@{/type-product/{id}(id=${typeproduct.typeProductId})}" class="btn btn-info">Detail</a>
+                <a th:href="@{/type-product/{id}(id=${typeproduct.typeProductId})}" class="btn btn-info">Chi tiết</a>
                 <a th:href="@{/type-product/delete/{id}(id=${typeproduct.typeProductId})}"
-                   class="btn btn-danger">Delete</a>
+                   class="btn btn-danger">Xóa</a>
             </td>
         </tr>
         </tbody>
@@ -69,7 +69,7 @@
         </div>
     </div>
     <div>
-        <a th:href="@{/home}" class="btn btn-primary"> Home </a>
+        <a th:href="@{/home}" class="btn btn-primary"> Trang chủ </a>
 
         <div class="row-sm-3"></div>
 
