--- a/src/main/resources/templates/type_product_view/new.html
+++ b/src/main/resources/templates/type_product_view/new.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Personnel Management System</title>
+    <title>Store Management System</title>
     <link th:href="@{css/main.css}" rel="stylesheet" type="text/css"/>
     <script type="text/javascript" th:src="@{js/main.js}"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -14,12 +14,12 @@
 <body>
 <div th:include="~{header.html}"></div>
 <div class="container">
-    <h1>Type Product Management System</h1>
+    <h1>Quản lý loại mặt hàng</h1>
     <hr>
-    <h2>Add Type Product</h2>
+    <h2>Thêm loại mặt hàng</h2>
     <form action="#" th:action="@{/type-product/save}" th:object="${typeProduct}" method="post" align="left">
         <div>
-            <label>Type Product Code: </label>
+            <label>Mã: </label>
             <label>
                 <input type="text" th:field="*{typeProductCode}" placeholder="Type Product Code"
                        class="form-control mb-4 col-4">
@@ -27,7 +27,7 @@
         </div>
 
         <div>
-            <label>Type Product Name: </label>
+            <label>Loại mặt hàng: </label>
             <label>
                 <input type="text" th:field="*{typeProductName}" placeholder="Type Product Name"
                        class="form-control mb-4 col-4">
@@ -35,7 +35,7 @@
         </div>
 
         <div class="form-group">
-            <label>Type Product Status: </label>
+            <label>Tình trạng: </label>
             <div th:each="option : ${T(group.g22.demostore.enums.TypeProductStatusOption).values()}">
                 <div class="custom-control custom-radio custom-control-inline">
                     <input type="radio" th:field="*{typeProductStatus}" th:value="${option.getValue()}"
@@ -47,9 +47,9 @@
         </div>
 
         <div>
-            <a th:href="@{/type-product}" class="btn btn-primary">Go back</a>
+            <a th:href="@{/type-product}" class="btn btn-primary">Quay lại</a>
 
-            <button type="submit" class="btn btn-info col-2">Save</button>
+            <button type="submit" class="btn btn-info col-2">Lưu</button>
         </div>
     </form>
 </div>
