update type product manager việt hóa

--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -22,7 +22,7 @@
                     <a class="nav-link" href="/employee">Nhân viên</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/type-product">Mặt hàng</a>
+                    <a class="nav-link" href="/type-product">Loại mặt hàng</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/statistic">Thống kê</a>
